# WaveSentinelPublic---Squareline-Studio-UI-CC1101---ESP32

./: CMakeLists.txt  README.md  filelist.txt  platformio.ini  ui.c  ui.h  ui_events.h  update_version.py  version.h  void fcnRCSWTXOn(lv_event_t  e).txt
DocsAndImages/: WT32_ClipperDiagram.psd  WT32_ClipperDiagram_UPDATED.psd
fonts/: ui_font_LCD22at8BPP.c  ui_font_LCD24at8BPP.c  ui_font_LCD30at8BPP.c  ui_font_Verdana12.c
images/: WT32_ClipperDiagram.psd  ui_img_analyzericon_png.c  ui_img_blankpgbkgnd_png.c  ui_img_flippericon_png.c  ui_img_mainbackground_png.c  ui_img_subrecordplay_png.c  ui_img_teslabtnicon_png.c  ui_img_wifilogo_png.c
include/: lv_conf.h
lcd/: Clipper1.sll  Clipper1.spj  Clipper1_events.py
screens/: ui_scrConfig.c  ui_scrKybdAlpha.c  ui_scrKybdNum.c  (+6 more)
src/: CMakeLists.txt  filelist.txt  main.cpp  main.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/components/: ui_comp_hook.c
src/fonts/: ui_font_Verdana11.c  ui_font_Verdana16.c  ui_font_Verdana18.c  ui_font_Verdana24.c  ui_font_Verdana8.c
src/images/: ui_img_analyzericon_png.c  ui_img_blankpgbkgnd_png.c  ui_img_flippericon_png.c  ui_img_hackbkgnd2_png.c  ui_img_hackbkgnd_png.c  ui_img_mainbackground_png.c  ui_img_needle_png.c  ui_img_splashbkgnd2_png.c  ui_img_subrecordplay_png.c  ui_img_teslabtnicon_png.c  ui_img_wifilogo_png.c
src/screens/: ui_scrCC1101Scan.c  ui_scrConfig.c  ui_scrKybdAlpha.c  ui_scrKybdNum.c  ui_scrMain.c  ui_scrPresets.c  ui_scrProtAna.c  ui_scrRCSWMain.c  ui_scrRCSWTenPole.c  ui_scrSettings.c  ui_scrSplash.c  ui_scrWifiApps.c  ui_scrWifiScanner.c
(+26 files in other folders)
